# notes

./: 2023.11.28.md  2023.11.29.md  README.md  TA渲染方向.md  用迭代器迭代vector容器.md
ConsoleApplication1/: tree.sln
ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj  tree.cpp
ConsoleApplication2/: ConsoleApplication2.sln
ConsoleApplication2/ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.vcxproj
game/: CMakeLists.txt
game/game/: CMakeLists.txt
game/game/include/: Camera.h  Shader.h  game.h
game/game/src/: Camera.cpp  Shader.cpp  fragmentSource.frag  game.cpp  vertexSource.vert
gitMD/: git操作.md
linuxMD/: cmake.md  commit格式.md  desktop.md  meson.md  pc文件.md  qmake.md  shell.md  语言环境搭建.md
md/: 3dgs.html  3dgs.md  KMP.md  STL.md  UE.md  c#.md  linux.md  unity.md  unity的架构.md  whitted风格光线追踪.md  with BOM.md  事件机制（event）！.md  代码随想录.md  技术美术.md  数学.md  水物理模拟.md  设计模式c++版.md  辐射度量学.md  配置cmake.md
md/linuxMD/: deepin学习.md  虚拟机配置.md
md/stl_code/: kk.cpp  priority_queue.cpp  sort_cmp.cpp  sort_operator.cpp  start.bat  test.cpp
md/vueMD/: 双向数据绑定.md
md/图形学/: 变换.md
md/波纹特效/: yuanpan.fbx  yuanpan.max
md/边缘光/: 05Rim.shader
myAwesomeGame/: myAwesomeGame.sln
myAwesomeGame/myAwesomeGame/: ComponentBase.cpp  ComponentBase.h  GameObjectBase.h  ModelComponent.h  Player.cpp  Player.h  TransformComponent.cpp  TransformComponent.h  (+6 more)
opengl/: OpenGL.md
springbootMD/: backend.md  layui.md  mapper.md  maven.md
vueMD/: vue3引用顺序.md  跨域设置.md
渲染/: 体渲染.md
设计模式/: 游戏设计中的设计模式.md  红警.md  观察者模式.md  设计模式c++版.md
骨骼动画/: DynamicBone.md
(+97 files in other folders)
